--- a/gb/21/3/7/n12794956.md
+++ b/gb/21/3/7/n12794956.md
@@ -1,12 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xazhws3249/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xazhws3249/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xazhws3249/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xazhws3249/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xazhws3249/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xazhws3249/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xazhws3249/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>烂尾搁浅一年多后 弘芯“芯骗”工程落幕</h2>
-
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/cb30f1476a452b03a38e361eccf86c2f-600x400.png" />
+<h6>弘芯半导体制造项目落幕。（武汉弘芯官网撷图）
+</h6>
 <hr>
-	<p>【大纪元2021年03月07日讯】3月5日，对武汉<ahref="https://github.com/xazhws3249/djy/blob/master/gb/tag/%E5%BC%98%E8%8A%AF.md#1">弘芯</a>半导体的许多员工来说是与这座曾经号称“<ahref="https://github.com/xazhws3249/djy/blob/master/gb/tag/%E5%8D%83%E4%BA%BF%E8%8A%AF%E7%89%87%E5%B7%A5%E7%A8%8B.md#1">千亿芯片工程</a>”告别的日子。弘芯项目烂尾搁浅一年多后，2月26日，弘芯高层下发员工遣散通知，称“公司无复工复产计划”，要求全体人员提出离职申请，在3月5日下班前完成离职手续办理。</p>
-<p><ahref="https://github.com/xazhws3249/djy/blob/master/gb/tag/%E5%BC%98%E8%8A%AF.md#1">弘芯</a>项目瘫痪凸显中国（中共）政府主导的科技产业扶植政策下投资狂热带来的风险。弘芯之后，可能还有更多地方政府因监审机制缺失要为类似骗局买单。在美国限供和断供高端芯片之后，中国全国一窝蜂投入芯片产业，成为“<ahref="https://github.com/xazhws3249/djy/blob/master/gb/tag/%E5%A4%A7%E7%82%BC%E9%92%A2%E9%93%81.md#1">大炼钢铁</a>”在习近平新时代的翻版。</p>
+	<p>【大纪元2021年03月07日讯】3月5日，对武汉<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BC%98%E8%8A%AF.md#1">弘芯</a>半导体的许多员工来说是与这座曾经号称“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8D%83%E4%BA%BF%E8%8A%AF%E7%89%87%E5%B7%A5%E7%A8%8B.md#1">千亿芯片工程</a>”告别的日子。弘芯项目烂尾搁浅一年多后，2月26日，弘芯高层下发员工遣散通知，称“公司无复工复产计划”，要求全体人员提出离职申请，在3月5日下班前完成离职手续办理。</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BC%98%E8%8A%AF.md#1">弘芯</a>项目瘫痪凸显中国（中共）政府主导的科技产业扶植政策下投资狂热带来的风险。弘芯之后，可能还有更多地方政府因监审机制缺失要为类似骗局买单。在美国限供和断供高端芯片之后，中国全国一窝蜂投入芯片产业，成为“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A4%A7%E7%82%BC%E9%92%A2%E9%93%81.md#1">大炼钢铁</a>”在习近平新时代的翻版。</p>
 <h2>地方政府被骗几十亿</h2>
 <p>据财新网5日报道，目前仍有弘芯员工不满赔偿方案打算申请劳动仲裁。报道说，中国传统新年过后，公司招牌已被全部拆除，近期有政府相关工作人员“密集进入厂区考察”。</p>
 <p>集微网此前引述一名员工的话说，公司停摆后一直在寻找接手的下家，“去年12月高层曾表示3个月后公司会进行调整，本以为迎来了转机，没想到我们的坚守换来的却是出局。”</p>
@@ -51,41 +52,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/7/n12794814.md#1">内蒙千余官涉煤贪腐被处理 习近平撂重话</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/7/n12794897.md#1">【疫情3.7】报告：美近千人接种疫苗后死亡</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/3/n12785793.md#1">分析：免受困于谈判陷阱 需认清中共三大本质</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/7/n12794594.md#1">【翻墙必看】与习再不同调 李克强读错字？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/18/n12557187.md#1">武汉弘芯巨额投资恐打水漂 项目遭遇烂尾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/1/29/n12720550.md#1">武汉弘芯再爆内幕！蒋尚义一度沦傀儡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/2/27/n12778408.md#1">被称“千亿骗局”的武汉弘芯 遣散所有员工</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/3/4/n12788703.md#1">不满遣散方案 弘芯230员工集体拒绝离职</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11538169.md#1" target="_blank">福瑞德：探寻中国百年历史的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">《求救信》感动欧洲议会观众：会哭很多次</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">共产暴政录：“六四屠城”的几个问题</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/2/28/n12780659.md#1">《转法轮》提及的史前文明案例：远古壁画</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12791244.md#1">在德州看到UFO 美国球星：几乎100%确定</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/2/n12784045.md#1">日本男童忆述上辈子被车撞死 想见前世母亲</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/2/19/n12762156.md#1">何为“六道”？六道轮回皆由“心念”起</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/3/n12787860.md#1">【未解之谜】罗斯威尔飞碟坠毁 有幸存外星人？</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/6/n12793489.md#1">【拍案惊奇】港共暴政下相约 照片中只剩她</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12792936.md#1">【新闻看点】李克强的64“稳”易富贤语出惊人</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/3/9/n10203826.md#1">【西游义趣】之三：唐僧宝象国逢难</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12790564.md#1">与周星驰合作《破坏之王》 吴孟达一语成谶</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12791483.md#1">陈昇证实罹口腔癌 唯一挂念跟妻子的约定</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12791998.md#1">习明泽个资泄漏案“主犯”被火烧私处拍裸照</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/2/n12785364.md#1">当年用心良苦拒借钱 周润发一句话悼念吴孟达</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12790564.md#1">与周星驰合作《破坏之王》 吴孟达一语成谶</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12791483.md#1">陈昇证实罹口腔癌 唯一挂念跟妻子的约定</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12792373.md#1">周杰伦夫妇富养女儿 豪宅地板撒满绘画颜料</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/4/n12789464.md#1">福原爱两度致歉 江宏杰发声：对她的爱至今不变</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12791244.md#1">在德州看到UFO 美国球星：几乎100%确定</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/4/n12788910.md#1">身体1征兆警惕子宫颈癌 名医推荐3食物预防</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12790884.md#1">美国一对被不同家庭收养的好友 竟是亲姊妹</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12791436.md#1">老当益壮 美国百岁女人瑞仍在麦当劳工作</a></li>
-<li><a href="https://github.com/xazhws3249/djy/blob/master/gb/21/3/5/n12792478.md#1">米饭配它吃 减少脂肪囤积 这样吃出不发胖体质</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740789.md#1">【拍案惊奇】李克强不再低调？从刘少奇说起</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740582.md#1">【十字路口】习近平卧病不起？海外爆料透玄机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739779.md#1">美国房市是否放缓 现在是买房好时机吗？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xazhws3249/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xazhws3249/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/7/n12794956.htm">烂尾搁浅一年多后 弘芯“芯骗”工程落幕</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/7/n12794956.htm">烂尾搁浅一年多后 弘芯“芯骗”工程落幕</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xazhws3249/djy/blob/master/gb/21/3/7/n12794956.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xazhws3249/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xazhws3249/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xazhws3249/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xazhws3249/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xazhws3249/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/3/7/n12794956.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
